# Lighthouse-Prompt-Companion

./: .dockerignore  .env  .env.development  .env.local  .env.production  .eslintrc  .eslintrc.js  .gitignore  .npmrc  .npmrc.auth  .npmrc.template  .size-limit.js  .stylelintrc  CLAUDE.md  Dockerfile  Dockerfile.new  Dockerfile.old  README.md  agent2.py  app.py  constants.js  docker-start.sh  ecosystem.config.js  gasket-data.js  gasket.config.js  gasket.js  lighthouse-openapi.yaml  local-setup.sh  manifest.xml  next.config.js  package-lock.json  package-lock.json1  package.json  pyproject.toml  requirements.txt  results.json  run_id_1c5fb4e3-5420-4823-bc93-7267b6c8ced2.csv  server.js  start-me-first.js  test.json
.github/: cirrus-scan-zaproxy.yaml
certs/: lighthouse-client.c3.int.gdcorp.tools_intermediate_chain.crt  nginx.conf
components/: ai-model-select.js  banner-message.js  confirm-modal.js  download-button.js  filter-cards.js  head.js  index-container.js  json-editor.js  logo.js  multi-item-text-entry.js  prompt-form.js  query-bool-editor.js  stat-card.js  stat-tag.js  stat-tags.js  summary-prompt.js  table-filter.js  table-select.js
config/: .config.js  .env.js  base.js  base.json  local.js  local.json  production.js  production.json
hooks/: use-ai-models.js  use-query-list.js  use-report-groups.js  use-rpt-periods.js  use-table-list.js
lib/: api-parse-aws-response.js  api-response-handler.js  api.js  auto-tls.js  build-info.js  check-ad-group.js  client.js  constants.js  filter-params-mgmt-service.js  filter-selections.js  models-adapter.js  models.js  (+3 more)
(+94 files in other folders)
